// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`orphans renders 0 1`] = `
Array [
  .c0 {
  orphans: 0;
}

<div
    className="c0"
  />,
  .c0 {
  orphans: 0;
}

<div
    className="c0"
  />,
  .c0 {
  orphans: 0;
}

<div
    className="c0"
  />,
  .c0 {
  orphans: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`orphans renders function 1`] = `
Array [
  .c0 {
  orphans: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  orphans: has;
}

<div
    className="c0"
  />,
  .c0 {
  orphans: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  orphans: has;
}

<div
    className="c0"
  />,
]
`;

exports[`orphans renders invalid theme path 1`] = `
Array [
  .c0 {
  orphans: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  orphans: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  orphans: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  orphans: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`orphans renders negative number 1`] = `
Array [
  .c0 {
  orphans: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  orphans: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  orphans: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  orphans: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`orphans renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    orphans: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    orphans: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    orphans: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    orphans: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    orphans: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    orphans: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    orphans: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    orphans: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    orphans: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    orphans: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    orphans: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    orphans: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    orphans: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    orphans: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    orphans: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    orphans: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`orphans renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    orphans: July;
  }
}

@media April {
  .c0 {
    orphans: August;
  }
}

@media January {
  .c0 {
    orphans: September;
  }
}

@media April {
  .c0 {
    orphans: November;
  }
}

@media June {
  .c0 {
    orphans: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    orphans: July;
  }
}

@media April {
  .c0 {
    orphans: August;
  }
}

@media January {
  .c0 {
    orphans: September;
  }
}

@media April {
  .c0 {
    orphans: November;
  }
}

@media June {
  .c0 {
    orphans: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    orphans: January;
  }
}

@media April {
  .c0 {
    orphans: December;
  }
}

@media January {
  .c0 {
    orphans: April;
  }
}

@media April {
  .c0 {
    orphans: May;
  }
}

@media June {
  .c0 {
    orphans: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    orphans: January;
  }
}

@media April {
  .c0 {
    orphans: December;
  }
}

@media January {
  .c0 {
    orphans: April;
  }
}

@media April {
  .c0 {
    orphans: May;
  }
}

@media June {
  .c0 {
    orphans: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`orphans renders postitive number 1`] = `
Array [
  .c0 {
  orphans: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  orphans: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  orphans: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  orphans: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`orphans renders string 1`] = `
Array [
  .c0 {
  orphans: July;
}

<div
    className="c0"
  />,
  .c0 {
  orphans: July;
}

<div
    className="c0"
  />,
  .c0 {
  orphans: June;
}

<div
    className="c0"
  />,
  .c0 {
  orphans: June;
}

<div
    className="c0"
  />,
]
`;

exports[`orphans renders valid theme path 1`] = `
Array [
  .c0 {
  orphans: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  orphans: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  orphans: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  orphans: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
